# simple-flask-mongo

./: .gitignore  app.py  pyproject.toml
applications/: main.py  models.py
config/: settings.py
